# ppm_astarqp_evaluation

./: .gitignore  .gitmodules  README.md
configs/: README.md
configs/multi_resolution_map/: 01_sparse.yml  02_dense.yml  03_maze_wide.yml  04_maze_narrow.yml
configs/ppm_sampling/: 01_sparse_halton_random.yml  01_sparse_independent_random.yml  02_dense_halton_random.yml  02_dense_independent_random.yml  03_maze_wide_halton_random.yml  03_maze_wide_independent_random.yml  04_maze_narrow_halton_random.yml  04_maze_narrow_independent_random.yml  target_coverage_01_sparse_independent.yml  target_coverage_02_dense_independent.yml  target_coverage_03_maze_wide_independent.yml  (+1 more)
data/: README.md
experiments/: README.md
experiments/exp1/map_generation/ppm/modules/Polygonal-Proximity-Map/ppm_builder/: README.md  pyproject.toml
experiments/exp1/map_generation/ppm/modules/Polygonal-Proximity-Map/ppm_builder/ppm_builder/: __init__.py  ppm2d.py  ppm3d.py  ppm_base.py
experiments/exp1/map_generation/ppm/modules/Polygonal-Proximity-Map/ppm_builder/ppm_builder/algorithms/: aabb.py  prox.py  voronoi.py
experiments/exp1/map_generation/ppm/modules/Polygonal-Proximity-Map/ppm_builder/ppm_builder/core/: cells.py  types.py
experiments/exp1/map_generation/ppm/modules/Polygonal-Proximity-Map/ppm_builder/ppm_builder/export/: halfspace_extract.py
experiments/exp1/map_generation/ppm/modules/Polygonal-Proximity-Map/ppm_builder/test/: quick_test.py
experiments/exp2/ros2_ws/src/smac_benchmark/: package.xml  setup.cfg  setup.py
experiments/exp2/ros2_ws/src/smac_benchmark/config/: costmap_inflation_on.yaml  planner_server_hybrid_astar.yaml  planner_server_theta_star.yaml
experiments/exp2/ros2_ws/src/smac_benchmark/launch/: smac_planner_only.launch.py
experiments/exp2/ros2_ws/src/smac_benchmark/smac_benchmark/: batch_config.py  batch_io.py  metrics.py  plot_path.py  plotter.py  run_batch_benchmark.py  run_benchmark.py  world_loader.py
results/: README.md
(+493 files in other folders)
