<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smac_benchmark</name>
  <version>0.1.0</version>
  <description>Nav2 Hybrid-A* and Theta* benchmark runner for the Polygonal Proximity Map experiments.</description>
  <maintainer email="nonomura_rikuto@stu.kobe-u.ac.jp">riku2</maintainer>
  <license file="LICENSE">Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_theta_star_planner</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


